Done with Email confirmation & password resetting.

--- a/Identity3_0/Views/Account/CheckEmail.cshtml
+++ b/Identity3_0/Views/Account/CheckEmail.cshtml
@@ -7,5 +7,5 @@
 <p>Please check your inbox to confirm your account.</p>
 <p>
     If the email has not shown up in 30 seconds, then please check your spam folder or click
-    <a asp-action="ResendEmailVerification" asp-controller="Account" asp-route-email="@ViewBag.email">here</a>
+    <a asp-action="ResendEmailVerification" asp-controller="Account" asp-route-email="@ViewBag.email">here</a>.
 </p>
