--- a/Identity3_0/Views/Account/ForgottenPassword.cshtml
+++ b/Identity3_0/Views/Account/ForgottenPassword.cshtml
@@ -6,9 +6,14 @@
 <h1>Forgotten Password</h1>
 <hr />
 
-<div class="col-3 border shadow container">
+<div class="col-4 border shadow container">
     <h2>Reset password</h2>
     <hr />
+
+    @if (ViewBag.error != null)
+    {
+        <div class="text-danger"><em>@ViewBag.error</em></div>
+    }
 
     <form asp-action="ForgottenPassword" asp-controller="Account">
         @Html.AntiForgeryToken()
