--- a/Identity3_0/Views/Account/PasswordResetWait.cshtml
+++ b/Identity3_0/Views/Account/PasswordResetWait.cshtml
@@ -8,5 +8,5 @@
 <p>
     Please check your inbox to reset your password. <br />
     if the mail hasn't shown up in 60 seconds, then please check your spam folder or click
-    <a asp-action="ResendPasswordReset" asp-controller="Account" asp-route-email="@ViewBag.email">here</a>
+    <a asp-action="ForgottenPassword" asp-controller="Account" asp-route-userPassword="@ViewBag.email">here</a> to re-send the mail.
 </p>
