--- a/Identity3_0/Views/Account/Edit.cshtml
+++ b/Identity3_0/Views/Account/Edit.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label" asp-for="Email"></label>
-                <input id="EmailRegistration" class="form-control" asp-for="Email" placeholder="Email" />
+                <input id="EmailRegistration" class="form-control" asp-for="Email" placeholder="Email" readonly />
                 <span id="EmailRegistrationVali" class="text-danger font-weight-bold" asp-validation-for="Email"></span>
             </div>
             <div class="form-group">
