--- a/Identity3_0/Views/Account/SignIn.cshtml
+++ b/Identity3_0/Views/Account/SignIn.cshtml
@@ -19,27 +19,30 @@
 
     <h1>Sign in</h1>
     <hr />
-    <form asp-action="SignIn" asp-controller="Account" method="post">
-        <div class="text-danger font-weight-bold" asp-validation-summary="ModelOnly"></div>
-        @Html.AntiForgeryToken()
-        <div class="form-group">
-            <label class="control-label" asp-for="Email"></label>
-            <input class="form-control" asp-for="Email" autofocus />
-            <span class="text-danger font-weight-bold" asp-validation-for="Email"></span>
-        </div>
-        <div class="form-group">
-            <label class="control-label" asp-for="Password"></label>
-            <input class="form-control" asp-for="Password" />
-            <span class="text-danger font-weight-bold" asp-validation-for="Password"></span>
-        </div>
-        <div class="form-group">
-            <input asp-for="RememberMe" />
-            <label asp-for="RememberMe"></label>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Submit" class="btn btn-primary btn-sm" />
-            <div class="float-right">Not registered? <a asp-action="Register" asp-controller="Account">Register</a></div>
-            <div>Forgotten password? Click <a asp-action="ForgottenPassword" asp-controller="Account">here</a></div>
-        </div>
-    </form>
+    <div class="mb-3">
+        <form asp-action="SignIn" asp-controller="Account" method="post">
+            <div class="text-danger font-weight-bold" asp-validation-summary="ModelOnly"></div>
+            @Html.AntiForgeryToken()
+            <div class="form-group">
+                <label class="control-label" asp-for="Email"></label>
+                <input class="form-control" asp-for="Email" autofocus />
+                <span class="text-danger font-weight-bold" asp-validation-for="Email"></span>
+            </div>
+            <div class="form-group">
+                <label class="control-label" asp-for="Password"></label>
+                <input class="form-control" asp-for="Password" />
+                <span class="text-danger font-weight-bold" asp-validation-for="Password"></span>
+            </div>
+            <div class="form-group">
+                <input asp-for="RememberMe" />
+                <label asp-for="RememberMe"></label>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Submit" class="btn btn-primary btn-sm" />
+                <div class="float-right">Not registered? <a asp-action="Register" asp-controller="Account">Register</a></div>
+                <div class="float-right">Forgotten password? Click <a asp-action="ForgottenPassword" asp-controller="Account">here</a></div>
+                <hr class="fade" /> @* Wonky solution but it works. *@
+            </div>
+        </form>
+    </div>
 </div>
